--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 /*
 Theme Name: My Basic Theme
+Theme URI: https://github.com/ennohyttrek/my-basic-theme
 Author: Enno Hyttrek
+Author URI: http://enno.hyttrek.com
+Version: 1.1.0
+Description:
+Einfaches Theme zum Projekt 'Infografik' im Rahmen der Ausbildung zum Mediengestalter.
+Simple theme for the projekt 'Infographics' in the Mediengestalter program.
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */ 
 
 /*---------------------
-Stylesheet für Inforgrafik zum Projekt Infografik
+Stylesheet für Infografik zum Projekt Infografik
 ©2020 Enno Hyttrek, ehy.training@gmail.com
 ---------------------*/
 
@@ -55,6 +63,10 @@ FARBE/STIL
 
 h1 {
     color: hsl(200, 15%, 30%);
+}
+
+header {
+    background-color: red;
 }
 
 
