--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ Theme URI: https://github.com/ennohyttrek/my-basic-theme
 Author: Enno Hyttrek
 Author URI: http://enno.hyttrek.com
 Version: 1.1.0
-Description:
-Einfaches Theme zum Projekt 'Infografik' im Rahmen der Ausbildung zum Mediengestalter.
-Simple theme for the projekt 'Infographics' in the Mediengestalter program.
+Description: Einfaches Theme zum Projekt 'Infografik' im Rahmen der Ausbildung zum Mediengestalter. Simple theme for the projekt 'Infographics' in the Mediengestalter program.
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */ 
