--- a/style.css
+++ b/style.css
@@ -3,16 +3,13 @@ Theme Name: My Basic Theme
 Theme URI: https://github.com/ennohyttrek/my-basic-theme
 Author: Enno Hyttrek
 Author URI: http://enno.hyttrek.com
-Version: 1.1.0
+Version: 1.1.1
 Description: Einfaches Theme zum Projekt 'Infografik' im Rahmen der Ausbildung zum Mediengestalter. Simple theme for the projekt 'Infographics' in the Mediengestalter program.
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */ 
 
-/*---------------------
-Stylesheet für Infografik zum Projekt Infografik
-©2020 Enno Hyttrek, ehy.training@gmail.com
----------------------*/
+
 
 /*---------------------
 RESET
@@ -43,6 +40,7 @@ TYPOGRAFIE
 ---------------------*/
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Langar&display=swap');
 
 
 body {
@@ -55,16 +53,28 @@ footer {
     font-size: 0.7em;
 }
 
+h1 {
+    font-family: 'Langar', cursive;
+}
+
 /*---------------------
 FARBE/STIL
 ---------------------*/
 
 h1 {
-    color: hsl(200, 15%, 30%);
+    color: hsl(200, 65%, 70%);
 }
 
 header {
-    background-color: red;
+    background-color: hsl(200, 65%, 30%);
+}
+
+body.home header {
+      background-color: hsl(200, 65%, 70%); 
+}
+
+body.home h1 {
+    color: hsl(200, 65%, 30%);
 }
 
 
