--- a/style.css
+++ b/style.css
@@ -39,8 +39,10 @@ p {
 TYPOGRAFIE
 ---------------------*/
 
+/*
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Langar&display=swap');
+*/
 
 
 body {
