--- a/style.css
+++ b/style.css
@@ -92,6 +92,19 @@ nav.main-nav ul li a:hover {
         color: hsl(200, 95%, 40%);
 }
 
+/*
+Color and Style
+*/
+
+/*:::::::::::::
+Farbigkeit etc.
+:::::::::::::*/
+
+
+/***********************
+Farbe, Style
+***********************/
+
 
 
 /*---------------------
